--- a/index.css
+++ b/index.css
@@ -8,3 +8,7 @@ h1 {
     font-weight: bolder;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+body{
+    background-color: black;
+    color: white;
+}
