--- a/index.css
+++ b/index.css
@@ -9,6 +9,6 @@ h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 body{
-    background-color: black;
-    color: white;
+    /* background-color: black;
+    color: white; */
 }
